--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "build:css": "postcss styles --base styles --dir app/styles --env production"
   },
   "dependencies": {
+    "@remix-run/node": "^0.17.5",
     "@remix-run/react": "^0.17.5",
+    "@remix-run/serve": "^0.17.5",
+    "mdx-bundler": "^5.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.0.0-beta.0",
-    "remix": "^0.17.5",
-    "@remix-run/serve": "^0.17.5",
-    "@remix-run/node": "^0.17.5"
+    "remix": "^0.17.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^0.17.5",
