--- a/package.json
+++ b/package.json
@@ -11,19 +11,33 @@
     "build:css": "postcss styles --base styles --dir app/styles --env production"
   },
   "dependencies": {
+    "@kentcdodds/md-temp": "^1.1.0",
     "@remix-run/node": "^0.17.5",
     "@remix-run/react": "^0.17.5",
     "@remix-run/serve": "^0.17.5",
-    "mdx-bundler": "^5.2.1",
+    "dotenv": "^10.0.0",
+    "escape-goat": "^4.0.0",
+    "lru-cache": "^6.0.0",
+    "mdx-bundler": "^6.0.0",
+    "octokit": "^1.4.0",
+    "parse-numeric-range": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.0.0-beta.0",
-    "remix": "^0.17.5"
+    "remark-autolink-headings": "^7.0.0",
+    "remark-gfm": "^2.0.0",
+    "remark-slug": "^7.0.0",
+    "remix": "^0.17.5",
+    "shiki": "^0.9.6",
+    "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^0.17.5",
+    "@types/lru-cache": "^5.1.1",
+    "@types/parse-numeric-range": "0.0.1",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.4",
+    "@types/unist": "^2.0.6",
     "autoprefixer": "^10.3.1",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
