--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/node": "^0.17.5",
     "@remix-run/react": "^0.17.5",
     "@remix-run/serve": "^0.17.5",
+    "@tailwindcss/typography": "^0.4.1",
     "dotenv": "^10.0.0",
     "escape-goat": "^4.0.0",
     "lru-cache": "^6.0.0",
